<resources>
    <string name="app_name">AdriApp</string>
    <string name="send">Send</string>
    <string name="login_page">Login page</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="RunningApp">Running App</string>
    <string name="RunningAppDesc">An application to track your runs</string>
    <string name="RecipesApp">Recipes App</string>
    <string name="RecipesAppDesc">Download and make your favorite recipes.</string>
    <string name="MessaggesApp">MessaggesApp</string>
    <string name="MesaggesApp">Messagges App</string>
    <string name="MessaggesAppDesc">Send messagges to your friends</string>
    <string name="WeatherApp">Weather App</string>
    <string name="WeatherDesc">Check the weather from your phone</string>
    <string name="SyncPcApp">Sync PC App</string>
    <string name="SyncPcDesc">Synchronize your phone thgrough your computer</string>
    <string name="SaveThePizza">Save The PizzApp</string>
    <string name="SaveThePizzaDesc">Evil people want to steal your pizza on your way home, protect her!</string>
    <string name="edtNombre">App name</string>
    <string name="edtPrecio">App price</string>
    <string name="edtPeso">App weight</string>
    <string name="edtDesc">App description</string>
    <string name="btnAdd">Add</string>
    <string name="Games">Games</string>
    <string name="HealthAndFitness">Health and fitness</string>
    <string name="Social">Social</string>
    <string name="Files">Files</string>
    <string name="opcEdit">Edit</string>
    <string name="opcDel">Delete</string>
    <string name="deleteDialogTitle">Delete app?</string>
    <string name="yes">Yes</string>
    <string name="NotDeleted">The application wasn\'t deleted</string>
    <string name="txtheader">Options</string>
    <string name="edit">Edit</string>
    <string name="DeleteAll">Delete all</string>
    <string name="logout">Logout</string>
    <string name="tituloDialogoAll">Clear all applications?</string>
    <string name="deleteSession">Close session?</string>
</resources>
