<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
 android:theme="@android:style/Theme.Holo"
tools:context="es.project.adriapp.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="25dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.74"
            android:background="@drawable/border"
            android:gravity="center">

            <TextView
                android:text="@string/login_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="4"
                android:elevation="2dp"
                android:textAlignment="center"
                android:textColor="#2b8fd3"
                tools:targetApi="lollipop"
                android:paddingBottom="11dp"
                android:paddingTop="11dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                app:srcCompat="@drawable/icon"
                android:id="@+id/imageView"
                android:layout_weight="2.94"
                android:layerType="none"
                android:contentDescription="" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="95dp">

            <TextView
                android:text="@string/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/edtName"
                android:textColor="@android:color/black" />

            <TextView
                android:text="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtPass"
                android:textColor="@android:color/black" />

            <Button
                android:text="@string/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSend"
                android:elevation="0dp"
                android:layout_gravity="center" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
